# notification

./: .env-example  .gitlab-ci.yml  Dockerfile-consumer  consumer.py  default.env  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
config/: config.py
db/: session.py
docker/: app.sh  consumer.sh
endpoints/: device.py
exceptions/: exception.py
migration/: env.py
models/: base_model.py  enums.py  user.py
rabbit/: docker-compose.yaml
schemas/: device.py  register_device.py  send_message.py  user.py  web_push.py
services/: base.py  gcm_service.py  user.py  webpush_service.py
utils/: utils.py
